--- a/views/index.html
+++ b/views/index.html
@@ -10,10 +10,15 @@
 </head>
 
 <body>
-    <div id="title-container" class="box-shadow">
-        <h1 id="title">Brainstormer</h1>
-        <textarea id="text-area" maxlength="20" placeholder="Please type any text to begin"></textarea>
-        <button id="brainstorm">Brainstorm</button>
+    <div id="header-bar" class="box-shadow">
+        <div id="title-container">
+            <h1 id="title">Brainstormer</h1>
+        </div>
+        <div id="text-area-container">
+            <textarea id="text-area" maxlength="20" placeholder="Please type any text to begin"></textarea>
+            <button id="brainstorm">Brainstorm</button>
+        </div>
+        <div id="empty-container"></div>
     </div>
     <div id="svg-container"></div>
     <script src="js/main.js"></script>
